Fixed un-posterized texture image showing for particles. Fixed flicker on breathing instructions. Added fade in for babylon scenes again

--- a/styles/breathe.module.css
+++ b/styles/breathe.module.css
@@ -66,7 +66,7 @@
   opacity: 0;
   color: white;
   animation: breath_instructions_fade_in, breath_instructions_fade_out;
-  animation-duration: 5s, 0.1s;
+  animation-duration: 2s, 0.1s;
   animation-delay: 0s, 10s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
